--- a/style.css
+++ b/style.css
@@ -9,13 +9,13 @@ header {
     position: relative;
     text-align: center;
     font-family: 'Arial', sans-serif;
-    font-size: 32px;
+    font-size: 2rem;
 }
 
 h2 {
     text-align: center;
     font-family: 'Arial', sans-serif;
-    font-size: 28px;
+    font-size: 1.75rem;
 }
 
 .d-flex {
